--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "jsqr": "^1.4.0",
     "less": "^4.1.3",
     "less-loader": "7.0.0",
     "vue": "^3.2.37",
